--- a/synthesize-order-service/src/main/resources/application.properties
+++ b/synthesize-order-service/src/main/resources/application.properties
@@ -7,28 +7,32 @@ dubbo.consumer.timeout=3000
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://47.107.110.132:3306/qian?autoReconnect=true&useUnicode=true&characterEncoding=utf-8
 
-# Êý¾ÝÔ´ÅäÖÃ
+# ï¿½ï¿½ï¿½ï¿½Ô´ï¿½ï¿½ï¿½ï¿½
 spring.shardingsphere.datasource.names=synthesize-master-0,synthesize-master-1
-# Êý¾ÝÔ´synthesize-master-0ÅäÖÃ
+# ï¿½ï¿½ï¿½ï¿½Ô´synthesize-master-0ï¿½ï¿½ï¿½ï¿½
 spring.shardingsphere.datasource.synthesize-master-0.type=org.apache.commons.dbcp2.BasicDataSource
 spring.shardingsphere.datasource.synthesize-master-0.driver-class-name=com.mysql.jdbc.Driver
-spring.shardingsphere.datasource.synthesize-master-0.url=jdbc:mysql://47.107.110.132:3306/synthesize-master-0?autoReconnect=true&useUnicode=true&characterEncoding=utf-8
+spring.shardingsphere.datasource.synthesize-master-0.url=jdbc:mysql://47.107.110.132:3306/synthesize-master-0?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&useSSL=false
 spring.shardingsphere.datasource.synthesize-master-0.username=root
 spring.shardingsphere.datasource.synthesize-master-0.password=Lxr87289627~
-# Êý¾ÝÔ´synthesize-master-1ÅäÖÃ
+# ï¿½ï¿½ï¿½ï¿½Ô´synthesize-master-1ï¿½ï¿½ï¿½ï¿½
 spring.shardingsphere.datasource.synthesize-master-1.type=org.apache.commons.dbcp2.BasicDataSource
 spring.shardingsphere.datasource.synthesize-master-1.driver-class-name=com.mysql.jdbc.Driver
-spring.shardingsphere.datasource.synthesize-master-1.url=jdbc:mysql://47.107.110.132:3306/synthesize-master-1?autoReconnect=true&useUnicode=true&characterEncoding=utf-8
+spring.shardingsphere.datasource.synthesize-master-1.url=jdbc:mysql://47.107.110.132:3306/synthesize-master-1?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&useSSL=false
 spring.shardingsphere.datasource.synthesize-master-1.username=root
 spring.shardingsphere.datasource.synthesize-master-1.password=Lxr87289627~
-# ·Ö¿â²ßÂÔÅäÖÃ
+# ï¿½Ö¿ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 spring.shardingsphere.sharding.default-database-strategy.inline.sharding-column=database_id
 spring.shardingsphere.sharding.default-database-strategy.inline.algorithm-expression=synthesize-master-$->{database_id % 2}
-# ·Ö±í¹æÔòÅäÖÃ
+# ï¿½Ö±ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 spring.shardingsphere.sharding.tables.synthesize_user_info.actual-data-nodes=synthesize-master-$->{0..1}.synthesize_user_info_$->{0..1}
 spring.shardingsphere.sharding.tables.synthesize_user_info.table-strategy.inline.sharding-column=user_id
 spring.shardingsphere.sharding.tables.synthesize_user_info.table-strategy.inline.algorithm-expression=synthesize_user_info_$->{user_id % 2}
-# ´ò¿ªsqlÊä³öÈÕÖ¾
+
+spring.shardingsphere.sharding.tables.synthesize_order_info.actual-data-nodes=synthesize-master-$->{0..1}.synthesize_order_info_$->{0..1}
+spring.shardingsphere.sharding.tables.synthesize_order_info.table-strategy.inline.sharding-column=user_id
+spring.shardingsphere.sharding.tables.synthesize_order_info.table-strategy.inline.algorithm-expression=synthesize_order_info_$->{user_id % 2}
+# ï¿½ï¿½sqlï¿½ï¿½ï¿½ï¿½ï¿½Ö¾
 spring.shardingsphere.props.sql.show = true
 
 
