add apollo config center

--- a/synthesize-pay-service/pom.xml
+++ b/synthesize-pay-service/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>fastjson</artifactId>
             <version>${fastjson.version}</version>
         </dependency>
+        <!--引入Apollo-->
+        <dependency>
+            <groupId>com.ctrip.framework.apollo</groupId>
+            <artifactId>apollo-client</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
