--- a/synthesize-share-param/pom.xml
+++ b/synthesize-share-param/pom.xml
@@ -42,5 +42,11 @@
             <artifactId>spring-beans</artifactId>
             <version>${spring-framework.version}</version>
         </dependency>
+        <!-- easyexcel -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>2.2.6</version>
+        </dependency>
     </dependencies>
 </project>
