apollo加载顺序修改

--- a/synthesize-gateway/src/main/resources/bootstrap.properties
+++ b/synthesize-gateway/src/main/resources/bootstrap.properties
@@ -4,9 +4,11 @@ spring.cloud.zookeeper.enabled=true
 #ip
 spring.cloud.zookeeper.connect-string=127.0.0.1:2181
 spring.cloud.zookeeper.config.enabled=true
-#Â·¾¶
+#Â·ï¿½ï¿½
 spring.cloud.zookeeper.config.root=/koala/console/latest
 spring.cloud.zookeeper.config.defaultContext=path
-#ÊôÐÔ·Ö¸î·û
+#ï¿½ï¿½ï¿½Ô·Ö¸ï¿½ï¿½
 spring.cloud.zookeeper.config.profileSeparator=- 
 spring.cloud.zookeeper.config.watcher.enabled=true
+
+apollo.bootstrap.enabled = true
